--- a/style.css
+++ b/style.css
@@ -1973,6 +1973,17 @@ background-size: 100% !important;}
 box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.2);}
 
 
+/*video ban*/
+.banner_phonevid{ max-width: 507px; position: relative; }
+.banner_phonevid img{position: relative;z-index: 11;}
+.banner_phonevid .mobilescreen{left: 0;
+right: 1%;
+display: block;
+margin: 0 auto;
+position: absolute;
+top: 9%;
+width: 48%;}
+.banner_phonevid .mobilescreen video{width: 100%;}
 
 
 @media(min-width:1025px){
@@ -3203,3 +3214,65 @@ h4{font-size: 18px;}
 
 
 }
+
+/* 14-06-2019 Style (Download Mobile Apps page) */
+.downloadapp-heading-controller h5{
+  font-family: 'Nunito', sans-serif;
+  font-size: 28px;
+  font-weight: normal;
+  color: #617d8a;
+  line-height: 38px;
+  margin: 34px 0 56px;
+}
+.googlepay-appstore-holder a {
+  display: inline-block;
+}
+.googlepay-appstore-holder a:not(:last-child){
+  margin-right: 15px;
+}
+.googlepay-appstore-holder a > img{
+  max-width: 100%;
+}
+@media (min-width:320px) and (max-width:767px){
+  .googlepay-appstore-holder a {
+    max-width: 134px;
+  }
+  .downloadapp-heading-controller h5 {
+    font-size: 18px;
+    line-height: 25px;
+    margin: 20px 0 20px;
+  }
+  .download-app .banner_sec .col-md-6:nth-child(1) {
+    order: 2;
+  }
+  .download-app .banner_sec .col-md-6:nth-child(2) {
+    order: 1;
+  }
+}
+@media (min-width:576px) and (max-width:767px){
+  .downloadapp-heading-controller h5 {
+    font-size: 22px;
+    line-height: 30px;
+    margin: 20px 0 30px;
+  }
+}
+@media (min-width:768px) and (max-width:991px){
+  .googlepay-appstore-holder a {
+    max-width: 134px;
+  }
+  .downloadapp-heading-controller h5 {
+    font-size: 21px;
+    line-height: 32px;
+    margin: 20px 0 34px;
+  }
+}
+
+.list-styles-apps{
+  font-family: 'Nunito', sans-serif;
+  font-size: 22px;
+  font-weight: normal;
+  color: #617d8a;
+  line-height: 18px;
+}
+
+/* 14-06-2019 Style (Download Mobile Apps page) */
