Resposinve desing & Alt SEO
Responsibe desing an alt SEO

--- a/style.css
+++ b/style.css
@@ -1694,7 +1694,7 @@ background: url(images/indextopbg1.png) no-repeat 0 0;background-size: 100%; z-i
 }
 
 .video_covid_wrapper{
-  width: 1200px;
+  width: 95%;
   height: 500px;
   background: white;
   border-radius: 8px;
