--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ display: -webkit-flex;display: flex; margin-left: 36px; margin-top: 20px; positi
   float:right;
 }
 
-.hero-covid{width:300px; height:225;}
+.hero-covid{width:300px; height:225px;}
 
 
 
