Covid Response Update
Center form.

--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ display: -webkit-flex;display: flex; margin-left: 36px; margin-top: 20px; positi
 }
 
 .hero-covid{width:300px; height:225px;}
-
+.hbspt-form form{margin:0 auto;}
 
 
 .common_gap{padding-top: 80px; padding-bottom: 80px;}
