--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ display: -webkit-flex;display: flex; margin-left: 36px; margin-top: 20px; positi
 }
 
 .hero-covid{width:300px; height:225px;}
-.hbspt-form form{margin:0 auto;}
+.hs-form-e94e1830-48c5-4d36-8bba-cbc22c22a3c9_124a3a8c-e99e-41a8-a2b3-b8a0b5ba1c61.hs-form{margin:0 auto;}
 
 
 .common_gap{padding-top: 80px; padding-bottom: 80px;}
