--- a/style.css
+++ b/style.css
@@ -196,6 +196,8 @@ display: -webkit-flex;display: flex; margin-left: 36px; margin-top: 20px; positi
 .hs-form-e94e1830-48c5-4d36-8bba-cbc22c22a3c9_5e8e5979-eaf0-49b2-9c65-4b0a5cd09c38.hs-form{margin:0 auto!important;}
 #hubspot-for{margin:0 auto;}
 .hs-form-cdf140f6-e336-4e64-a805-15d34e8fde23_2c616957-8de9-479c-a64d-7fe3c77983aa.hs-form{margin:0 auto!important;}
+.hbspt-form form{margin:0 auto!important;}
+
 
 .common_gap{padding-top: 80px; padding-bottom: 80px;}
 .section_title{width: 100%; text-align: center; margin-bottom: 80px;}
