--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ display: -webkit-flex;display: flex; margin-left: 36px; margin-top: 20px; positi
 #hubspot-for{margin:0 auto;}
 .hs-form-cdf140f6-e336-4e64-a805-15d34e8fde23_2c616957-8de9-479c-a64d-7fe3c77983aa.hs-form{margin:0 auto!important;}
 .hbspt-form form{margin:0 auto!important;}
-
+.hs-form-cdf140f6-e336-4e64-a805-15d34e8fde23_46af1575-ae3d-4d32-a92b-aeb2a153c18b.hs-form{margin:0 auto!important;}
 
 .common_gap{padding-top: 80px; padding-bottom: 80px;}
 .section_title{width: 100%; text-align: center; margin-bottom: 80px;}
