--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ display: -webkit-flex;display: flex; margin-left: 36px; margin-top: 20px; positi
 }
 .hbspt-form{margin:0 auto!important;}
 .hero-covid{width:300px; height:225px;}
-#hubspot-for{margin:0 auto;}
+#hubspot-for{margin:0 auto;width: 50%;}
 
 
 .common_gap{padding-top: 80px; padding-bottom: 80px;}
