--- a/style.css
+++ b/style.css
@@ -191,9 +191,9 @@ display: -webkit-flex;display: flex; margin-left: 36px; margin-top: 20px; positi
   animation: bounceRight 2s infinite;
   float:right;
 }
-.hbspt-form{margin:0 auto!important;}
+.hbspt-form{margin:0 auto!important; width: 50%;}
 .hero-covid{width:300px; height:225px;}
-#hubspot-for{margin:0 auto;width: 50%;}
+#hubspot-form{margin:0 auto;width: 50%;}
 
 
 .common_gap{padding-top: 80px; padding-bottom: 80px;}
