--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ display: -webkit-flex;display: flex; margin-left: 36px; margin-top: 20px; positi
 .hero-covid{width:300px; height:225px;}
 
 #hubspot-form{margin:0 auto!important; width:50%!important;}
-
+.hs-form stacked{width:50%!important;}
 
 .common_gap{padding-top: 80px; padding-bottom: 80px;}
 .section_title{width: 100%; text-align: center; margin-bottom: 80px;}
