--- a/style.css
+++ b/style.css
@@ -453,7 +453,7 @@ display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; margin-left: -15px; margin-
 
 
 
-.foot2,.foot3{-webkit-box-flex: 0; -ms-flex: 0 0 15%; flex: 0 0 15%; max-width: 15%; padding-left: 15px; padding-right: 15px;}
+.foot2,.foot3,.foot9{-webkit-box-flex: 0; -ms-flex: 0 0 15%; flex: 0 0 15%; max-width: 15%; padding-left: 15px; padding-right: 15px;}
 .foot4{-webkit-box-flex: 0; -ms-flex: 0 0 20%; flex: 0 0 20%; max-width: 20%; padding-left: 15px; padding-right: 15px;}
 .foot5{-webkit-box-flex: 0; -ms-flex: 0 0 20%; flex: 0 0 20%; max-width: 20%; padding-left: 15px; padding-right: 15px;}
 
@@ -1291,6 +1291,7 @@ background-size: 100%; width: 447px; height: 1170px;}
 .project_management_bot_box p{font-size: 16px; line-height: 25px; color: #90a4ae; }
 .project_management_bot_box figure{max-width: 200px; margin: 0 auto; margin-bottom: 5px;}
 .project_management_con{ margin: 0 auto; position: relative; padding-left: 50px; padding-right: 50px;}
+.project_management_bot_box .gsuite-apps{text-align:center!important;background: #FFFFFF;box-shadow: 0px 2px 9px rgba(0, 0, 0, 0.087276);border-radius: 8px; width: 81px;}
 
 
 .project_management_bot_box .step{width: 40px; height: 40px; line-height: 40px; font-size: 22px; color: #2196f3;  font-weight: 700;
@@ -2282,7 +2283,9 @@ h2{font-size: 40px; line-height: 45px;}
 .project_management_bot_box h3{font-size: 18px; line-height: 22px;}
 .project_management_bot_box h4{font-size: 16px; line-height: 24px;}
 .project_management_bot_box p{font-size: 14px;line-height: 22px;}
+.project_management_bot_box .aside-text{font-size:22px!important; margin-left: -40px!important;}
 .project_management_bot_box figure{max-width: 155px;}
+.project_management_bot_box .feature_task{max-width:400px!important;}    
 .how_it_works_slides{max-width: 100%; padding-left: 48px; padding-right: 48px;}
 .how_it_works_slides .slick-arrow.slick-prev{left: 0;}
 .how_it_works_slides .slick-arrow.slick-next{right: 0;}
