--- a/css/style.competitors.css
+++ b/css/style.competitors.css
@@ -12,6 +12,18 @@
 
 }
 
+@media only screen and (max-width: 600px) {
+  .time_tracker_content 
+  {
+  padding-top:90px;
+  }
+  h1
+  {
+  font-size: 45px!important;
+  line-height: 45px!important;  
+  }
+
+}
 
 /*font-family: 'Nunito', sans-serif;*/
 b,strong{font-weight: 800;}
